<resources>
    <string name="app_name">Movieland</string>

    <!-- COMMON STRINGS -->
    <string name="server_data_error_message">Can\'t get data/configuration from server</string>
    <string name="error_message_network_connection">Please check internet connection</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="loading">Loading</string>
    <string name="please_wait_server_configurations">Getting server configuration, please wait</string>
    <!-- -->

    <!-- MAIN_CONTRACT SECTION -->
    <string name="error_message_get_auth_token">Error fetching authentication request token</string>
    <string name="error_message_get_auth_access_token">Error fetching authentication user</string>
    <string name="error_message_approve_request_token">Error approve request code</string>
    <string name="double_back_to_exit">Please click BACK again to exit</string>
    <!-- END MAIN_CONTRACT SECTION -->


    <!-- NAVIGATION DRAWER SECTION -->
    <string name="action_top_rated_movies">Top rated</string>
    <string name="action_coming_soon">Coming soon</string>
    <string name="action_in_theaters">In theaters</string>
    <string name="action_latest_trailers">Latest trailers</string>
    <string name="action_most_popular_movies">Most popular</string>
    <string name="action_showtimes_tickets"><![CDATA[Showtimes & Tickets]]></string>
    <string name="group_menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- END NAVIGATION DRAWER SECTION -->
</resources>
